# ColorTracking

./: README.md
ColorTracking/: CMakeLists.txt  README.md  main.cpp
ColorTracking/include/: DataIO.h  DataIO2.h  Feature3DInfoList.h  FeatureTracker.h  GaussNewtonPoseGetter.h  GeomUtils.h  GradientEstimator.h  GradientEstimator2.h  GradientHessianEstimator.h  GradientHonestHessianEstimator.h  GroundTruthPoseGetter.h  GroundTruthTracker.h  InputReader.h  LevenbergPoseGetter.h  LkPoseGetter.h  LktInitTracker.h  LktTracker.h  NewtonPoseGetter.h  NewtonTracker.h  PoseGetter.h  PyramideTracker.h  SLSQPPoseGetter.h  SlsqpLktPoseGetter.h  SlsqpLktTracker.h  Tracker.h  Tracker2.h
ColorTracking/include/pose_getter/: GaussNewtonPoseGetter.h  GroundTruthPoseGetter.h  LevenbergPoseGetter.h  LkPoseGetter.h  NewtonPoseGetter.h  PoseGetter.h  SLSQPPoseGetter.h  SlsqpLktPoseGetter.h
ColorTracking/include/test_runner/: argparsing.hpp  data.hpp  io.hpp
ColorTracking/include/tracker/: GroundTruthTracker.h  LktInitTracker.h  LktTracker.h  PyramideTracker.h  SlsqpLktTracker.h  Tracker.h
ColorTracking/include/utils/: OptProcessor.hpp
ColorTracking/src/: DataIO.cpp  DataIO2.cpp  Feature3DInfoList.cpp  FeatureTracker.cpp  GaussNewtonPoseGetter.cpp  GeomUtils.cpp  GradientEstimator.cpp  GradientEstimator2.cpp  GradientHessianEstimator.cpp  GradientHonestHessianEstimator.cpp  GroundTruthPoseGetter.cpp  GroundTruthTracker.cpp  InputReader.cpp  LkPoseGetter.cpp  LktInitTracker.cpp  LktTracker.cpp  NewtonPoseGetter.cpp  NewtonTracker.cpp  SLSQPPoseGetter.cpp  SlsqpLktPoseGetter.cpp  SlsqpLktTracker.cpp  Tracker.cpp  Tracker2.cpp
ColorTracking/src/estimator/: GradientEstimator.cpp  GradientHessianEstimator.cpp  GradientHonestHessianEstimator.cpp
ColorTracking/src/pose_getter/: GaussNewtonPoseGetter.cpp  GroundTruthPoseGetter.cpp  LevenbergPoseGetter.cpp  LkPoseGetter.cpp  NewtonPoseGetter.cpp  SLSQPPoseGetter.cpp  SlsqpLktPoseGetter.cpp
ColorTracking/src/test_runner/: argparsing.cpp  data.cpp  io.cpp
ColorTracking/src/tracker/: GroundTruthTracker.cpp  LktInitTracker.cpp  LktTracker.cpp  SlsqpLktTracker.cpp  Tracker.cpp
ColorTracking/src/utils/: OptProcessor.cpp
ColorTracking/tests/: tests.cpp  tests.h
Renderer/: CMakeLists.txt
Renderer/include/: CircleWindow.h  mesh.h  renderer.h
Renderer/src/: CircleWindow.cpp  histogram.cpp  maps.cpp  renderer.cpp
Scripts/ConvertRBOT/: convert.py  requirements.txt  test.py
Scripts/RBOTScripts/: auc.py  plot_residuals.py  requirements.txt
Scripts/Test/: apply_mask.py  create_image.py  display_pixels.py  frames_from_video.py  read_and_show_frame.py  read_show_frame_from_video.py  remove_first_frames.py  remove_texture.py  rgb_with_residual_pixels.py  scale_mesh.py  test.py  video_frame_counter.py  video_from_frames.py  videos_from_test_result.py
histograms/: CMakeLists.txt
histograms/include/: CircleWindow.h  MeshRenderer.h  Object3d.h  Object3d2.h  PoseEstimator.h  PoseEstimator2.h  histogram.h  histogram2.h  maps.h  mesh.h  projection.h  renderer.h
histograms/src/: CircleWindow.cpp  MeshRenderer.cpp  Object3d.cpp  Object3d2.cpp  PoseEstimator.cpp  PoseEstimator2.cpp  histogram.cpp  histogram2.cpp  maps.cpp  mesh.cpp  projection.cpp  renderer.cpp
